--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -184,11 +184,21 @@
                   [multiple]="true" [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'Appraiser Status'">
                 </kt-multi-select-search>
               </div>
-              <div class="col">
+              <!-- <div class="col">
                 <label>By Scrap Status</label>
                 <kt-multi-select-search formControlName="scrapStatus" [items]="scrapStatusList" [multiple]="true"
                   [bindLabel]="'stageName'" [isClear]="clearData" [placeholder]="'Scrap Status'">
                 </kt-multi-select-search>
+              </div> -->
+              <div class="col">
+                <label>By BM Status</label>
+                <kt-multi-select-search formControlName="bmStatus" [items]="approvalStatus.bml" [multiple]="true"
+                  [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'BM Status'"></kt-multi-select-search>
+              </div>
+              <div class="col">
+                <label>By OPS Team Status</label>
+                <kt-multi-select-search formControlName="otStatus" [items]="approvalStatus.bml" [multiple]="true"
+                  [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'OPS Status'"></kt-multi-select-search>
               </div>
               <div class="col-2 d-flex align-items-end">
                 <label></label>
