bugs fixuing and pdf changes

--- a/gold-loan-backend/templates/scrap-purchase-voucher.html
+++ b/gold-loan-backend/templates/scrap-purchase-voucher.html
@@ -44,7 +44,7 @@
                     <div >
                         <div >(Formerly Augmont Precious Metals Private Limited)</div>
                         <div>(CIN :- U51909MH2020PTC337639) (GSTIN:- 27AATCA3030A1Z3)</div>
-                        <div>3rd Floor,Bullion House,115,Tambakata Lane, Zaveri Bazaar, MUMBAI- 400003</div>
+                        <div>3rd Floor, Bullion House,115, Tambakata Lane, Zaveri Bazaar, MUMBAI- 400003</div>
                     </div><br>
                    
                     <div class="row">
@@ -59,7 +59,7 @@
                         <div class="col-6">
                             <div class="row">
                                 <div class="col-3 text-left"><b>Website :</b></div>
-                                <div class="col-9 text-left"></div>
+                                <div class="col-9 text-left">www.augmont.com</div>
                             </div>
                             <div class="row">
                                 <div class="col-3 text-left"><b>Email :</b></div>
@@ -78,19 +78,19 @@
                 <div class="col-10 m-auto pt-2 pb-5" >
                     <div class="row">
                         <div class="col-6 text-left">
-                            <div ><b>{{this.customerName}}</b></div>
+                            <div ><b>Name: </b>{{this.customerName}}</div>
                             <div style="word-wrap: break-word"><b>Address: </b>
                                 {{this.customerAddress}}
                             </div>
                             <!-- <div>{{this.pinCode}}</div> -->
                             <!-- <div>{{this.customerSatte}}</div> -->
-                            <div ><b>PAN No:</b><span> {{this.panNo}}</span></div>
+                            <div ><b>PAN No:</b><span> &nbsp;{{this.panNo}}</span></div>
                         </div>
                         <div class="col-6">
                             <div ><b>Voucher Number: </b><span> {{this.voucherNumber}}</span></div>
                             <div ><b>Voucher Date: </b><span> {{this.date}}</span></div>
-                            <div ><b>GST No: </b><span> {{this.gstinNumber}}</span></div>
-                            <div ><b>Cin No: </b><span> {{this.cinNumber}}</span></div>
+                            <div ><b>GST No: </b><span> &nbsp;{{this.gstinNumber}}</span></div>
+                            <div ><b>CIN: </b><span> &nbsp;{{this.cinNumber}}</span></div>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                             <th style="width: 8%">Sr.No</th>
                             <th style="width: 42%; word-wrap: break-word">Description</th>
                             <!-- <th style="width: 10%">Units</th> -->
-                            <th style="width: 15%"><div>Net weight</div> <div>(in grams)</div></th>
+                            <th style="width: 15%"><div>Net weight</div> <div>(In Grams)</div></th>
                             <th style="width: 15%">Rate Per Gram</th>
                             <th style="width: 15%">Amount</th>
                         </tr>
@@ -129,7 +129,7 @@
                             <td class="text-left px-1">GROSS INVOICE AMOUNT</td>
                             <td class="text-right px-1">&nbsp</td>
                             <td class="text-right px-1">&nbsp</td>
-                            <td class="text-right px-1">{{this.totalAmount}}</td>
+                            <td class="text-right px-1"><b>{{this.totalAmount}}</b></td>
                         </tr>
                         <tr>
                             <td>&nbsp</td>
@@ -147,7 +147,7 @@
             </div>
             <div class="row pt-4 pr-3">
                 <div class="col-10 mx-auto my-0 px-0 py-0" >
-                    <div class="text-left" ><b>Delivery :- Ex-office/Showroom/As per Customers request</b></div>
+                    <div class="text-left" ><b>Delivery - Ex-office/Showroom/As per Customers request</b></div>
                     <div class="pl-5">
                         <div class="pl-4"><b>Terms & Conditions:</b></div>
                         <ol type="1">
