--- a/gold-loan-backend/templates/scrap-customer-acknowledgement-templet.html
+++ b/gold-loan-backend/templates/scrap-customer-acknowledgement-templet.html
@@ -32,14 +32,13 @@
         {{#each acknowledgementData}}
         <div class="row">
             <div class="col-10 text-center m-auto">
-                <div class="text-left">
+                <!-- <div class="text-left">
                     <div><span><b>GST: </b></span><span>{{this.gstNo}}</span></div>
                     <div class="pt-3"><span><b>HSN Code: </b></span><span></span></div>
-                </div>
-                <p class="pt-3"><h5><b class="text-center">AUGMONT PRIVATE LIMITED</b></h5><br>
-                    <span style="font-weight: 500;">3rd Floor, 115/121, BULLION HOUSE, TAMBAKATA LANE,PYDHONIE, Mumbai City, Maharashtra,
-                        400003</span><br><br>
-                    <span style="font-weight: 500;">Contact Number: 9898776677 &nbsp&nbsp&nbsp&nbsp Email: support@augmont.com</span>
+                </div> -->
+                <p><h4><b class="text-center">Augmont Goldtech Private Limited</b></h4><br>
+                    <span style="font-weight: 500;">3rd Floor, Bullion House, 115, Tambakata Lane, Zaveri Bazaar,  MUMBAI- 400003</span><br>
+                    <span style="font-weight: 500;"><b>Contact Number:</b> 022-61420000 &nbsp&nbsp&nbsp&nbsp <b>Email:</b>  help@augmont.com</span>
                 </p>
                 <br>
                 <h6 class="text-center"><b>PURITY TESTING / MELTING CONSENT FORM</b></h6>
@@ -68,7 +67,7 @@
                             </div>
                             <div class="col-6">
                                 <span><b>Email ID : </b></span>
-                                <span>{{this.customerEmail}}</span>
+                                <span>&nbsp;{{this.customerEmail}}</span>
                             </div>
                         </div>
                     </div>
@@ -103,10 +102,10 @@
                 <table class="align-top text-center table-bordered"
                     style="width: 100%;margin:0;font-weight: 500;table-layout: fixed;border: 1px solid #b4b4b4;">
                     <tr >
-                        <th style="width: 10%">Sr.No</th>
+                        <th style="width: 10%">Sr.No.</th>
                         <th style="width: 50%; word-wrap: break-word">Description</th>
                         <th style="width: 20%">Quantity (no's)</th>
-                        <th style="width: 20%">Gross weight (in grams)</th>
+                        <th style="width: 20%">Gross weight (In Grams)</th>
                     </tr>
                     {{#each ornamentData}}
                     <tr>
@@ -203,13 +202,13 @@
            
         </div>
         <div class="row pt-4">
-            <div class="col-10 m-auto"><b>CIN:</b><span>{{this.cinNo}}</span></div>
+            <div class="col-10 m-auto"><b>CIN: </b><span>&nbsp;{{this.cinNo}}</span></div>
         </div>
         {{/each}}
 
         <div class="row pt-4">
           <div class="col-10 m-auto">
-            <p>Registered Address:  <b>AUGMONT PRIVATE LIMITED</b> 3rd Floor, 115/121, BULLION HOUSE, TAMBAKATA LANE,PYDHONIE, Mumbai City, Maharashtra, 400003 Contact Number 9898776677 Email  support@augmont.com
+            <p>Registered Address:  <b>AUGMONT PRIVATE LIMITED</b> 3rd Floor, 115/121, BULLION HOUSE, TAMBAKATA LANE,PYDHONIE, Mumbai City, Maharashtra, 400003 <b>Contact Number</b> 022-61420000 <b>Email</b>  help@augmont.com
             </p>
           </div>
         </div>
