--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
@@ -94,7 +94,7 @@
                             [ngClass]="loan.loanStatusForOperatinalTeam == 'pending' ? 'text-warning' :loan.loanStatusForOperatinalTeam == 'approved' ? 'text-success' : 'text-danger'">
                             {{loan.loanStatusForOperatinalTeam | titlecase}}
                         </span>
-                        <span *ngIf="loan.loanStatusForOperatinalTeam == 'pending' && loan.commentByOperatinalTeam"
+                        <span *ngIf="loan.loanStatusForOperatinalTeam == 'incomplete' && loan.commentByOperatinalTeam"
                             class="material-icons custom-icon" mat-raised-button
                             matTooltip={{loan.commentByOperatinalTeam}} matTooltipPosition="above"
                             matTooltipClass="custom-tooltip-white">
