--- a/gold-loan-backend/templates/pawnTicket-secure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-template.html
@@ -129,7 +129,7 @@
                     <tr>
                         <td></td>
                         <td>022-61420000</td>
-                        <td>help@augmont.com</td>
+                        <td>goldforall@augmont.com</td>
                     </tr>
                 </table>
             </div>
