pkt-fe::payment fix, kyc, edit request

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -197,7 +197,8 @@
 							</div>
 
 							<div *ngIf="isPanVerified">
-								<button class="w-100 success-button" mat-raised-button matTooltip="Pan Verified">
+								<button class="w-100 success-button" mat-raised-button matTooltip="Pan Verified"
+									[disabled]="disabled">
 									Verified
 								</button>
 							</div>
