pkt-fe::packet bug and filter

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -215,9 +215,9 @@
             <div class="row">
               <div class="col-9">
                 <label>By Packet Assigned</label>
-                <select placeholder="Packet Assigned" class="form-control" formControlName="scheme">
-                  <option selected disabled value="null">Select Type</option>
-                  <option value="All">All</option>
+                <select placeholder="Packet Assigned" class="form-control" formControlName="packets">
+                  <!-- <option selected disabled value="null">Select Type</option> -->
+                  <option selected value="">All</option>
                   <option value=true>Used</option>
                   <option value=false>Unused</option>
                 </select>
