--- a/gold-admin-frontend/src/app/views/pages/admin/admin-account/change-password/change-password.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/admin-account/change-password/change-password.component.html
@@ -72,7 +72,7 @@
                             </div>
                         </div>
 
-                        <div class="kt-margin-t-30">
+                        <div class="offset-5 col kt-margin-t-30">
                             <kt-button [type]="'submit'" [value]="'Submit'" class="kt-margin-r-10"></kt-button>
                             <kt-button [type]="'reset'" [value]="'Reset'"></kt-button>
                         </div>
