pkt-fe::loan transfer search,add lead city bug, minor UI chnages

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer-list/loan-transfer-list.component.html
@@ -22,7 +22,7 @@
 
                 <ng-container matColumnDef="amount">
                     <mat-header-cell *matHeaderCellDef>
-                        <div class="text-right">Outstanding Loan Amount</div>
+                        <div class="">Outstanding Loan Amount</div>
                     </mat-header-cell>
                     <mat-cell *matCellDef="let loan">{{loan?.loanTransfer?.disbursedLoanAmount}}</mat-cell>
                 </ng-container>
