--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -235,11 +235,11 @@
             <div class="row">
               <div class="col-9">
                 <label>By Deposit Status</label>
-                <select class="form-control" formControlName="scheme">
-                  <option value="null" selected disabled>Select Status</option>
-                  <option value="Pending">PENDING</option>
-                  <option value="Completed">COMPLETED</option>
-                  <option value="Rejected">REJECTED</option>
+                <select class="form-control" formControlName="depositStatus">
+                  <option value="" selected>All</option>
+                  <option value="Pending">Pending</option>
+                  <option value="Completed">Completed</option>
+                  <option value="Rejected">Rejected</option>
                 </select>
               </div>
               <div class="col-3 d-flex align-items-end">
