--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -269,7 +269,7 @@
                     </div>
 
                     <!-- packets -->
-                    <div class="filtered-data" *ngIf="filteredList?.packets != 'All'">
+                    <div class="filtered-data" *ngIf="filteredList?.packets">
                         <div class="filtered-title">Packets</div>
                         <div class="d-flex">
                             <div class="filtered-value">
@@ -278,6 +278,19 @@
 
                                 <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
                                     (click)="clearFilter('packets')">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- deposit -->
+                    <div class="filtered-data" *ngIf="filteredList?.depositStatus">
+                        <div class="filtered-title">Status</div>
+                        <div class="d-flex">
+                            <div class="filtered-value">
+                                <span>{{ filteredList?.depositStatus | titlecase }}</span>
+
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('depositStatus')">
                             </div>
                         </div>
                     </div>
