--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -192,12 +192,12 @@
               </div> -->
               <div class="col">
                 <label>By BM Status</label>
-                <kt-multi-select-search formControlName="bmStatus" [items]="approvalStatus.bml" [multiple]="true"
+                <kt-multi-select-search formControlName="bmStatus" [items]="approvalStatus.bmlfilter" [multiple]="true"
                   [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'BM Status'"></kt-multi-select-search>
               </div>
               <div class="col">
                 <label>By OPS Team Status</label>
-                <kt-multi-select-search formControlName="otStatus" [items]="approvalStatus.bml" [multiple]="true"
+                <kt-multi-select-search formControlName="otStatus" [items]="approvalStatus.bmlfilter" [multiple]="true"
                   [bindLabel]="'name'" [isClear]="clearData" [placeholder]="'OPS Status'"></kt-multi-select-search>
               </div>
               <div class="col-2 d-flex align-items-end">
