filter changes in packet list

--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packets-list/packets-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/packets/packets-list/packets-list.component.html
@@ -1,3 +1,4 @@
+<kt-filtered-data [filteredList]="filteredDataList"></kt-filtered-data>
 <kt-portlet>
     <kt-portlet-body>
         <div class="mat-table__wrapper" [ngStyle]="{'overflow-x':'hidden'}">
