--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/customer-management/customer-list/customer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/customer-management/customer-list/customer-list.component.html
@@ -2,32 +2,28 @@
     <kt-portlet-body>
         <div class="mat-table__wrapper" [ngStyle]="{'overflow-x': 'hidden'}">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="customerResult">
-
                 <ng-container matColumnDef="fullName">
                     <mat-header-cell *matHeaderCellDef>Customer Name</mat-header-cell>
                     <mat-cell *matCellDef="let customer">
                         {{customer.firstName | titlecase}}&nbsp;{{customer.lastName | titlecase}}</mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer Id</mat-header-cell>
                     <mat-cell *matCellDef="let customer">{{customer.customerUniqueId | uppercase}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="pan">
                     <mat-header-cell *matHeaderCellDef>PAN Number</mat-header-cell>
-                    <mat-cell *matCellDef="let customer">{{customer.panCardNumber | uppercase}}</mat-cell>
+                    <mat-cell *matCellDef="let customer">
+                        {{customer.panCardNumber ? (customer.panCardNumber | uppercase) : 'NA' }}</mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="state">
                     <mat-header-cell *matHeaderCellDef>State</mat-header-cell>
                     <mat-cell *matCellDef="let customer">{{customer.state.name | titlecase}}</mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="city">
                     <mat-header-cell *matHeaderCellDef>City</mat-header-cell>
                     <mat-cell *matCellDef="let customer">{{customer.city.name | titlecase}}</mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="actions">
                     <mat-header-cell [ngClass]="'w-200'" *matHeaderCellDef>Action</mat-header-cell>
                     <mat-cell *matCellDef="let customer" [ngClass]="'w-200'">
@@ -41,9 +37,7 @@
                         </p>
                     </mat-cell>
                 </ng-container>
-
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-
                 <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
             </mat-table>
 
