--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -356,3 +356,5 @@
 <div class="p-3">
     <kt-modal-footer *ngIf="showButton && !disbursed" (action)="action($event)" [value]="'Done'"></kt-modal-footer>
 </div>
+
+<button (click)="download()"></button>
