pkt-fe::view styling in loan

--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
@@ -206,7 +206,7 @@
 
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef>KYC Details</mat-header-cell>
-                    <mat-cell *matCellDef="let role" (click)="viewKYC(role)" class="kt-pointer">
+                    <mat-cell *matCellDef="let role" (click)="viewKYC(role)" class="kt-pointer view-link">
                         <div [ngStyle]="{'display': 'inherit'}" *ngxPermissionsOnly="['appliedKycView']">
                             View
                         </div>
