--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -151,7 +151,8 @@
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let lead">
-                        <div *ngxPermissionsOnly="['leadManagmentView']" class="kt-pointer" (click)="viewLead(lead)">
+                        <div *ngxPermissionsOnly="['leadManagmentView']" class="kt-pointer view-link"
+                            (click)="viewLead(lead)">
                             View</div>
                     </mat-cell>
                 </ng-container>
