bug fix in purchesvoucher

--- a/gold-loan-backend/templates/scrap-purchase-voucher.html
+++ b/gold-loan-backend/templates/scrap-purchase-voucher.html
@@ -83,7 +83,7 @@
                                 {{this.customerAddress}}
                             </div>
                             <!-- <div>{{this.pinCode}}</div> -->
-                            <!-- <div>{{this.customerSatte}}</div> -->
+                            <!-- <div>{{this.customerState}}</div> -->
                             <div ><b>PAN No:</b><span> &nbsp;{{this.panNo}}</span></div>
                         </div>
                         <div class="col-6">
