pkt-fe::pawn ticket

--- a/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
@@ -33,11 +33,11 @@
         <div class="row pr-5" style="font-weight: 500">
             <div class="text-center col-10 ">
                 <p style="font-size: 16px;"><b>Powered By</b><br>
-                <div class="p-0 mb-0" style="display: block;margin-left: auto;margin-right: auto;width:22%;">
-                    <img src={{imagePath}} alt="augomentLogo" style="height:120px;width:120px;">
-                </div>
-                <span class="text-center " style="font-size: 24px;"><b>AUGMONT GOLDTECH PRIVATE
-                        LIMITED</b></span>
+                    <div class="p-0 mb-0" style="display: block;margin-left: auto;margin-right: auto;width:22%;">
+                        <img src={{imagePath}} alt="augomentLogo" style="height:120px;width:120px;">
+                    </div>
+                    <span class="text-center " style="font-size: 24px;"><b>AUGMONT GOLDTECH PRIVATE
+                            LIMITED</b></span>
                 </p>
             </div>
         </div>
@@ -273,7 +273,7 @@
                     <li>Bullet repayment at the end of of the tenure of the loan.</li>
                     <li>Interest is payable from the date of loan till full and final repayment outstanding loan
                         amount and all other amounts pertaining thereto.</li>
-                    <li>Normal Release (Guaranteed 24-hour door step release)</li>
+                    <li>Normal Release of Gold (Guaranteed 24-hour door step release)</li>
                     <li>Please retain this document for release of ornaments
                     </li>
                 </ul>
@@ -302,6 +302,34 @@
                         principal, interest, other charges, if any) is payable and due.
                     </li>
                 </ul>
+            </div>
+        </div>
+        <div class="row pt-3 pr-5 mb-5 ">
+            <div class="col-10 " style="font-size: small;font-weight: 400;">
+                <p class="mb-2 text-center text-danger"><b>OTHER TERMS</b></p>
+                <p class="text-danger">If the margin falls below 20%, Augmont reserves the right to sell the ornaments
+                    either by the public
+                    auction or private arrangement at any point of time or in the immediate future, even before the
+                    expiry
+                    of term. Augmont shall initiate the auction after giving borrower a time of 7 days to meet the
+                    margin.
+                </p>
+                <p class="text-danger">By sanctioning the loan, Augmont does not confirm or accept the carat purity of
+                    the gold ornaments
+                    pledged. In case Augmont finds that the pledged gold ornaments is spurious in nature, the borrower
+                    is
+                    bound by such findings and undertakes to repay the loan and interest immediately failing which
+                    Augmont has the right to initiate legal proceedings to recover such losses.
+                </p>
+                <p class="text-danger">In case the interest or the principal is not repaid within the due date or
+                    earlier as demanded,
+                    Augmont
+                    has the right to initiate legal proceedings / auction the gold to set off the dues towards loan
+                    amount,
+                    interest and charges. If the amount thus recovered is insufficient to cover the due amount, the
+                    shortfall
+                    will be recovered from the borrower personally or from his other personal assets.
+                </p>
             </div>
         </div>
         <div class="row pt-3 pr-5 mb-5 ">
