--- a/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
+++ b/gold-loan-backend/templates/pawnTicket-secure-unsecure-template.html
@@ -306,22 +306,22 @@
         </div>
         <div class="row pt-3 pr-5 mb-5 ">
             <div class="col-10 " style="font-size: small;font-weight: 400;">
-                <p class="mb-2 text-center text-danger"><b>OTHER TERMS</b></p>
-                <p class="text-danger">If the margin falls below 20%, Augmont reserves the right to sell the ornaments
+                <p class="mb-2 text-center "><b>OTHER TERMS</b></p>
+                <p class="">If the margin falls below 20%, Augmont reserves the right to sell the ornaments
                     either by the public
                     auction or private arrangement at any point of time or in the immediate future, even before the
                     expiry
                     of term. Augmont shall initiate the auction after giving borrower a time of 7 days to meet the
                     margin.
                 </p>
-                <p class="text-danger">By sanctioning the loan, Augmont does not confirm or accept the carat purity of
+                <p class="">By sanctioning the loan, Augmont does not confirm or accept the carat purity of
                     the gold ornaments
                     pledged. In case Augmont finds that the pledged gold ornaments is spurious in nature, the borrower
                     is
                     bound by such findings and undertakes to repay the loan and interest immediately failing which
                     Augmont has the right to initiate legal proceedings to recover such losses.
                 </p>
-                <p class="text-danger">In case the interest or the principal is not repaid within the due date or
+                <p class="">In case the interest or the principal is not repaid within the due date or
                     earlier as demanded,
                     Augmont
                     has the right to initiate legal proceedings / auction the gold to set off the dues towards loan
