--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -214,7 +214,7 @@
                     </div>
 
                     <!-- appliedScrap -->
-                    <div class="filtered-data" *ngIf="filteredList?.scrapStatus">
+                    <!-- <div class="filtered-data" *ngIf="filteredList?.scrapStatus">
                         <div class="filtered-title">By Scrap Status</div>
                         <div class="d-flex">
                             <div class="filtered-value" *ngFor="let item of filteredList?.scrapStatus; let i = index;">
@@ -223,7 +223,7 @@
                                     (click)="clearFilter('scrapStatus',i)">
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <!--  cron -->
                     <div class="filtered-data" *ngIf="filteredList?.product">
@@ -278,6 +278,20 @@
 
                                 <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
                                     (click)="clearFilter('packets')">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- packetTracking -->
+                    <div class="filtered-data" *ngIf="filteredList?.packetTracking">
+                        <div class="filtered-title">By Tracking status</div>
+                        <div class="d-flex">
+                            <div class="filtered-value">
+                                <!-- {{filteredList?.packetTracking || json}} -->
+                                <span *ngIf="filteredList?.packetTracking == 'incomplete'">Incomplete</span>
+                                <span *ngIf="filteredList?.packetTracking == 'complete'">Complete</span>
+
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('packetTracking')">
                             </div>
                         </div>
                     </div>
