--- a/gold-admin-frontend/src/app/views/partials/components/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/update-location/update-location.component.html
@@ -271,7 +271,7 @@
                             </kt-button>
                         </div>
                         <div class="col-4 d-flex justify-content-center align-items-center ">
-                            <label class="kt-pointer kt-link kt-link--brand kt-font-bolder" (click)="generateOTP()">
+                            <label *ngIf="!otpVerfied" class="kt-pointer kt-link kt-link--brand kt-font-bolder" (click)="generateOTP()">
                                 Resend OTP</label>
                         </div>
                     </div>
