--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -170,7 +170,7 @@
                 <ng-container matColumnDef="view">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let item">
-                        <span (click)="viewScrap(item)" class="kt-pointer">
+                        <span (click)="viewScrap(item)" class="kt-pointer view-link">
                             View
                         </span>
                     </mat-cell>
