--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/buying-list/buying-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/buying-list/buying-list.component.html
@@ -7,7 +7,7 @@
                     <mat-cell *matCellDef="let list">{{list?.customer?.customerUniqueId}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="scrapId">
-                    <mat-header-cell *matHeaderCellDef>Scrap Id</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Scrap ID</mat-header-cell>
                     <mat-cell *matCellDef="let list">{{list?.scrapUniqueId}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerName">
@@ -27,7 +27,7 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let list">
                         <div [ngStyle]="{'display': 'inherit'}" *ngIf="!list.packetAssigned">
-                            <span class="kt-pointer" (click)="viewScrap(list)">View Scrap</span>
+                            <span class="kt-pointer view-link" (click)="viewScrap(list)">View Scrap</span>
                             <!-- <div class="px-2">|</div>
                             <span class="kt-pointer" (click)="newScrap(list)">Add New Scrap</span> -->
                         </div>
